Refine Mint-Y-Dark visibility with surgical contrast fixes

--- a/src/Mint-Y/gtk-3.0/sass/_common.scss
+++ b/src/Mint-Y/gtk-3.0/sass/_common.scss
@@ -1441,8 +1441,8 @@ treeview.view {
     -GtkTreeView-expander-size: 16;
   }
 
-  border-left-color: transparentize($fg_color, 0.65);   // this is actually the tree lines color,
-  border-top-color: transparentize($fg_color, 0.65);    // while this is the grid lines color, better then nothing
+  border-left-color: if($variant == 'dark', transparentize($fg_color, 0.45), transparentize($fg_color, 0.65));   // this is actually the tree lines color,
+  border-top-color: if($variant == 'dark', transparentize($fg_color, 0.45), transparentize($fg_color, 0.65));    // while this is the grid lines color, better then nothing
 
   rubberband { @extend rubberband; }                 // to avoid borders being overridden by the previously set props
 
@@ -2430,7 +2430,7 @@ scrolledwindow {
 
 //vbox and hbox separators
 separator {
-  background-color: transparentize(black, 0.9);
+  background-color: if($variant == 'dark', transparentize($fg_color, 0.85), transparentize(black, 0.9));
   min-width: 1px;
   min-height: 1px;
 }
@@ -2781,7 +2781,7 @@ paned {
     -gtk-icon-source: none;
     border-style: none;
     background-color: transparent;
-    background-image: _solid($borders_color);
+    background-image: if($variant == 'dark', _solid(lighten($borders_color, 12%)), _solid($borders_color));
     background-size: 1px 1px;
 
     &:selected { background-image: _solid($selected_bg_color); }
